<resources>
    <string name="app_name">Канбан-доска</string>
    <string name="action_settings">Settings</string>
    <string name="action_lists">Test lists</string>
    <string name="action_board">Test board </string>
    <string name="action_disable_drag">Disable drag</string>
    <string name="action_enable_drag">Enable drag</string>
    <string name="action_list">List (drag on touch image icon)</string>
    <string name="action_grid_vertical">Grid vertical (drag on long press)</string>
    <string name="action_grid_horizontal">Grid horizontal (drag on long press)</string>
    <string name="description_add_card">Описание</string>
    <string name="actor__add_card">Исполнитель</string>
    <string name="cost_add_card">Трудозатраты</string>
    <string name="title_add_card">Название задачи</string>
    <string name="comment_add_card">Комментарий</string>
    <string name="help_button">Попросить помощь</string>
    <string name="delete_button">Удалить</string>
    <string name="edit_button">Редактировать</string>
    <string name="save_button">Сохранить</string>
</resources>
